Move to layered architecture
