# controller/categoryController.go
@@ -1,61 +1,72 @@
 package controller
 
 import (
-	"kasir-api/config"
 	"kasir-api/models"
+	"kasir-api/service"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
 
+type CategoryController struct {
+	service *service.CategoryService
+}
+
+func NewCategoryController(service *service.CategoryService) *CategoryController {
+	return &CategoryController{service: service}
+}
+
 // CreateCategory godoc
 // @Summary Tambah kategori baru
-// @Description Menambahkan data kategori ke database
 // @Tags Categories
 // @Accept json
 // @Produce json
 // @Param category body models.Category true "Category Data"
 // @Success 201 {object} models.Category
 // @Router /categories [post]
-func CreateCategory(c *gin.Context) {
-	var category models.Category
-	if err := c.ShouldBindJSON(&category); err != nil {
+func (h *CategoryController) CreateCategory(c *gin.Context) {
+	var input models.Category
+	if err := c.ShouldBindJSON(&input); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	if err := config.DB.Create(&category).Error; err != nil {
+	err := h.service.Create(&input)
+	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusCreated, category)
+	c.JSON(http.StatusCreated, input)
 }
 
 // GetAllCategories godoc
 // @Summary Ambil semua kategori
-// @Description Mengambil list semua kategori
 // @Tags Categories
 // @Produce json
 // @Success 200 {array} models.Category
 // @Router /categories [get]
-func GetAllCategories(c *gin.Context) {
-	var categories []models.Category
-	config.DB.Find(&categories)
+func (h *CategoryController) GetAllCategories(c *gin.Context) {
+	categories, err := h.service.GetAll()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
 	c.JSON(http.StatusOK, categories)
 }
 
 // GetCategoryByID godoc
 // @Summary Ambil detail satu kategori
-// @Description Mengambil data kategori berdasarkan ID
 // @Tags Categories
 // @Produce json
 // @Param id path int true "Category ID"
 // @Success 200 {object} models.Category
 // @Router /categories/{id} [get]
-func GetCategoryByID(c *gin.Context) {
-	var category models.Category
-	if err := config.DB.First(&category, c.Param("id")).Error; err != nil {
+func (h *CategoryController) GetCategoryByID(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Param("id"))
+	category, err := h.service.GetByID(id)
+	if err != nil {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Category not found"})
 		return
 	}
@@ -65,7 +76,6 @@ func GetCategoryByID(c *gin.Context) {
 
 // UpdateCategory godoc
 // @Summary Update kategori
-// @Description Mengubah data kategori berdasarkan ID
 // @Tags Categories
 // @Accept json
 // @Produce json
@@ -73,38 +83,37 @@ func GetCategoryByID(c *gin.Context) {
 // @Param category body models.Category true "Category Data"
 // @Success 200 {object} models.Category
 // @Router /categories/{id} [put]
-func UpdateCategory(c *gin.Context) {
-	var category models.Category
-	if err := config.DB.First(&category, c.Param("id")).Error; err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Category not found"})
-		return
-	}
-
+func (h *CategoryController) UpdateCategory(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Param("id"))
 	var input models.Category
 	if err := c.ShouldBindJSON(&input); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	config.DB.Model(&category).Updates(input)
-	c.JSON(http.StatusOK, category)
+	updatedCategory, err := h.service.Update(id, input)
+	if err != nil {
+		// Bisa improve error handling untuk membedakan 404 dan 500
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, updatedCategory)
 }
 
 // DeleteCategory godoc
 // @Summary Hapus kategori
-// @Description Menghapus (soft delete) kategori berdasarkan ID
 // @Tags Categories
 // @Produce json
 // @Param id path int true "Category ID"
 // @Success 200 {object} map[string]string
 // @Router /categories/{id} [delete]
-func DeleteCategory(c *gin.Context) {
-	var category models.Category
-	if err := config.DB.First(&category, c.Param("id")).Error; err != nil {
+func (h *CategoryController) DeleteCategory(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Param("id"))
+	err := h.service.Delete(id)
+	if err != nil {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Category not found"})
 		return
 	}
-
-	config.DB.Delete(&category)
 	c.JSON(http.StatusOK, gin.H{"message": "Category deleted successfully"})
 }
