# docs/swagger.yaml
@@ -18,9 +18,7 @@ definitions:
   models.Product:
     properties:
       category:
-        allOf:
-        - $ref: '#/definitions/models.Category'
-        description: Relasi
+        $ref: '#/definitions/models.Category'
       category_id:
         type: integer
       created_at:
@@ -38,15 +36,22 @@ definitions:
       updated_at:
         type: string
     type: object
+host: localhost:8080
 info:
-  contact: {}
-  description: Ini adalah API server untuk Kasir App tugas session 1.
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  description: API Server untuk aplikasi Kasir sederhana
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
   title: Kasir API
   version: "1.0"
 paths:
   /categories:
     get:
-      description: Mengambil list semua kategori
       produces:
       - application/json
       responses:
@@ -62,7 +67,6 @@ paths:
     post:
       consumes:
       - application/json
-      description: Menambahkan data kategori ke database
       parameters:
       - description: Category Data
         in: body
@@ -82,7 +86,6 @@ paths:
       - Categories
   /categories/{id}:
     delete:
-      description: Menghapus (soft delete) kategori berdasarkan ID
       parameters:
       - description: Category ID
         in: path
@@ -102,7 +105,6 @@ paths:
       tags:
       - Categories
     get:
-      description: Mengambil data kategori berdasarkan ID
       parameters:
       - description: Category ID
         in: path
@@ -122,7 +124,6 @@ paths:
     put:
       consumes:
       - application/json
-      description: Mengubah data kategori berdasarkan ID
       parameters:
       - description: Category ID
         in: path
@@ -147,7 +148,6 @@ paths:
       - Categories
   /products:
     get:
-      description: Mengambil list semua produk beserta kategorinya
       produces:
       - application/json
       responses:
@@ -163,7 +163,6 @@ paths:
     post:
       consumes:
       - application/json
-      description: Menambahkan data produk ke database dengan relasi kategori
       parameters:
       - description: Product Data
         in: body
@@ -183,7 +182,6 @@ paths:
       - Products
   /products/{id}:
     delete:
-      description: Menghapus (soft delete) produk berdasarkan ID
       parameters:
       - description: Product ID
         in: path
@@ -203,7 +201,6 @@ paths:
       tags:
       - Products
     get:
-      description: Mengambil data produk berdasarkan ID
       parameters:
       - description: Product ID
         in: path
@@ -223,7 +220,6 @@ paths:
     put:
       consumes:
       - application/json
-      description: Mengubah data produk berdasarkan ID
       parameters:
       - description: Product ID
         in: path
