# models/product.go
@@ -1,20 +1,16 @@
 package models
 
-import (
-	"time"
-
-	"gorm.io/gorm"
-)
+import "time"
 
 type Product struct {
-	ID          uint           `gorm:"primaryKey" json:"id"`
-	Name        string         `gorm:"type:varchar(100);not null" json:"name"`
-	Description string         `gorm:"type:text" json:"description"`
-	Price       float64        `gorm:"type:decimal(12,2);not null" json:"price"`
-	Stock       int            `gorm:"default:0" json:"stock"`
-	CategoryID  uint           `gorm:"not null" json:"category_id"`
-	Category    Category       `gorm:"foreignKey:CategoryID" json:"category,omitempty" binding:"-"` // Relasi
-	CreatedAt   time.Time      `json:"created_at"`
-	UpdatedAt   time.Time      `json:"updated_at"`
-	DeletedAt   gorm.DeletedAt `gorm:"index" json:"-"`
+	ID          int        `json:"id"`
+	Name        string     `json:"name"`
+	Description string     `json:"description"`
+	Price       float64    `json:"price"`
+	Stock       int        `json:"stock"`
+	CategoryID  int        `json:"category_id"`
+	Category    *Category  `json:"category,omitempty"`
+	CreatedAt   time.Time  `json:"created_at"`
+	UpdatedAt   time.Time  `json:"updated_at"`
+	DeletedAt   *time.Time `json:"-"`
 }
